/**
 * Video proto.
 *
 * @author Guillaume Le Biller (<i>lebiller@ekino.com</i>)
 * @version $Id$
 */

package fr.kissy.day9tv.gae.model;

option java_package = "fr.kissy.day9tv.gae.proto";
option java_outer_classname = "VideosProto";
option java_generic_services = false;
option optimize_for = LITE_RUNTIME;

message Videos {
    message Video {
        required fixed64 timestamp = 10;
        optional string type = 11;
        optional string subType = 12;
        optional string title = 13;
        optional string subtitle = 14;
        optional string description = 15;
        optional bytes videoParts = 16;
    }

    optional string startCursor = 1;
    optional string endCursror = 2;
    repeated Video videos = 3;
}